--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 								<h1 class="text-uppercase">
 									Dr. Saadia Riaz
 								</h1>
-								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua.
+								<p><h4>Consultant Rheumatologist in Islamabad</h4>
+									MBBS | MRCP | Eular Course On Rheumatic Diseases | SCE (Specialty Certificate Examination)
 								</p>
 								<a href="#appoinment" class="primary-btn2 mt-20 text-uppercase main">Book an Appointment<span class="lnr lnr-arrow-right"></span></a>
 							</div>
@@ -164,8 +164,8 @@
 						</div>
 						<div class="col-lg-6 col-md-12 about-right no-padding">
 							<h1>Book an <br> Appointment</h1>
-							<div class="single-footer-widget">Call <h3>012-6532-568-9746</h3> to book a definite appointment</div>
-							<form class="booking-form" id="myForm" action="donate.php">
+							<div class="single-footer-widget">Call <h3>+92 51 2854772</h3> to book a definite appointment</div>
+							<form class="booking-form" id="myForm" action="https://formspree.io/dr.saadia.rhu@gmail.com" method="POST">
 								 	<div class="row">
 								 		<div class="col-lg-12 d-flex flex-column">
 							 				<input name="name" placeholder="Patient name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Patient name'" class="single-in mt-20" required="" type="text" required>
@@ -179,7 +179,6 @@
 										<div class="col-lg-12 flex-column">
 											<textarea class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
 										</div>
-
 										<div class="col-lg-12 d-flex justify-content-end send-btn">
 											<button class="submit-btn primary-btn mt-20 text-uppercase ">confirm booking<span class="lnr lnr-arrow-right"></span></button>
 										</div>
@@ -341,10 +340,10 @@
 							<div class="single-footer-widget mail-chimp">
 								<h6 class="mb-20">Contact Us</h6>
 								<p>
-									56/8, bir uttam qazi nuruzzaman road, west panthapath, kalabagan, Dhanmondi, Dhaka - 1205
+									Islamabad Specialists Clinic, Next to Ali Medical Centre, Kiran Plaza, Ground Floor, Plot 13-A, F-8 Markaz, F-8, Islamabad.
 								</p>
-								<h3>012-6532-568-9746</h3>
-								<h3>012-6532-568-97468</h3>
+								<h3>+92 51 2854772</h3>
+								<h3>+92 51 2817094</h3>
 							</div>
 						</div>
 					</div>
