--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 											<textarea class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
 										</div>
 										<div class="col-lg-12 d-flex justify-content-end send-btn">
-											<button class="submit-btn primary-btn mt-20 text-uppercase ">confirm booking<span class="lnr lnr-arrow-right"></span></button>
+											<button class="submit-btn primary-btn mt-20 text-uppercase" type="submit">confirm booking<span class="lnr lnr-arrow-right"></span></button>
 										</div>
 
 										<div class="alert-msg"></div>
