cleaned up code

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 											<button class="submit-btn primary-btn mt-20 text-uppercase" type="submit">confirm booking<span class="lnr lnr-arrow-right"></span></button>
 										</div>
 
-										<div class="alert-msg">Message sent</div>
+										<div class="alert-msg"></div>
 									</div>
 					  		</form>
 							</div>
