added script to fetch blog posts

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 									<a href="#service">Services</a>
 									<a href="#appoinment">Appoinment</a>
 									<a href="#location">When &amp; Where</a>
+									<a href="#blogs">Blog</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -102,6 +103,8 @@
 									</p>
 								</div>
 							</div>
+						</div>
+						<div class="col-lg-6">
 							<div class="single-feature d-flex flex-row">
 								<div class="icon">
 									<span class="lnr lnr-clock"></span>
@@ -109,12 +112,10 @@
 								<div class="desc">
 									<h4 class="text-uppercase">When you should see a Rheumatologist?</h4>
 									<p>
-										If you are suffereing from severe and persistent joint or muscle pain, you should consult the rheumatologist. It's important to determine a correct diagnosis early so that appropriate treatment can begin as soon as possible.
+										If you are suffering from severe and persistent joint or muscle pain, you should consult the rheumatologist. It's important to determine a correct diagnosis early so that appropriate treatment can begin as soon as possible.
 									</p>
 								</div>
 							</div>
-						</div>
-						<div class="col-lg-6">
 							<div class="single-feature d-flex flex-row pb-30">
 								<div class="icon">
 									<span class="lnr lnr-hourglass"></span>
@@ -126,7 +127,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="single-feature d-flex flex-row pb-30">
+							<!-- <div class="single-feature d-flex flex-row pb-30">
 								<div class="icon">
 									<span class="lnr lnr-briefcase"></span>
 								</div>
@@ -147,7 +148,7 @@
 										inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher conduct women face higher conduct.
 									</p>
 								</div>
-							</div>
+							</div> -->
 						</div>
 					</div>
 				</div>
@@ -307,7 +308,7 @@
 									Fridays
 								</td>
 								<td>
-									Not Available
+									Available during morning.
 								</td>
 							</tr>
 							<tr class="bottomBorder">
@@ -331,6 +332,96 @@
 				</div>
 			</section>
 			<!-- end blog Area -->
+			<section class="blog-area section-gap" id="blogs">
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-md-8 pb-30 header-text">
+							<h1>Recent Blogs</h1>
+							<p>
+								Follow Dr. Saadia Riaz's blog at <a href="https://drsaadiarhu.blogspot.com">drsaadiarhu.blogspot.com</a>.
+							</p>
+						</div>
+					</div>
+					<div class="row" id="blogInfo">
+						<div class="single-blog col-lg-4 col-md-4" id="blog1">
+							<img class="f-img img-fluid mx-auto blogImage" src="img/b1.jpg" alt="">
+							<h4>
+								<a href="#" class="blogLink">Coming Soon</a>
+							</h4>
+							<p class="blogDesc">
+								This blog post is yet unpublished.
+							</p>
+
+						</div>
+						<div class="single-blog col-lg-4 col-md-4" id="blog2">
+							<img class="f-img img-fluid mx-auto blogImage" src="img/b2.jpg" alt="">
+							<h4>
+								<a href="https://drsaadiarhu.blogspot.com" class="blogLink">Coming Soon</a>
+							</h4>
+							<p class="blogDesc">
+								This blog post is yet unpublished.
+							</p>
+
+						</div>
+						<div class="single-blog col-lg-4 col-md-4" id="blog3">
+							<img class="f-img img-fluid mx-auto blogImage" src="img/b3.jpg" alt="">
+							<h4>
+								<a href="#" class="blogLink">Coming Soon</a>
+							</h4>
+							<p class="blogDesc">
+								This blog post is yet unpublished.
+							</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="container">
+					<div class="row">
+						<div class="single-blog col-lg-4 col-md-4">
+							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+								<div>
+									<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
+									<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
+								</div>
+								<div class="meta" id="blog1date">
+									Soon
+									<!-- <span class="lnr lnr-heart"></span> 15
+									<span class="lnr lnr-bubble"></span> 04 -->
+								</div>
+							</div>
+						</div>
+						<div class="single-blog col-lg-4 col-md-4">
+							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+								<div>
+									<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
+									<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
+								</div>
+								<div class="meta" id="blog2date">
+									Soon
+									<!-- <span class="lnr lnr-heart"></span> 15
+									<span class="lnr lnr-bubble"></span> 04 -->
+								</div>
+							</div>
+						</div>
+						<div class="single-blog col-lg-4 col-md-4">
+							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+								<div>
+									<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
+									<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
+								</div>
+								<div class="meta" id="blog3date">
+									Soon
+									<!-- <span class="lnr lnr-heart"></span> 15
+									<span class="lnr lnr-bubble"></span> 04 -->
+								</div>
+							</div>
+						</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="coverLoad"></div>
+			</section>
 
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
@@ -338,7 +429,7 @@
 					<div class="row">
 						<div class="col-lg-4  col-md-6">
 							<div class="single-footer-widget mail-chimp">
-								<h6 class="mb-20">Contact Us</h6>
+								<h6 class="mb-20">Contact</h6>
 								<p>
 									Islamabad Specialists Clinic, Next to Ali Medical Centre, Kiran Plaza, Ground Floor, Plot 13-A, F-8 Markaz, F-8, Islamabad.
 								</p>
@@ -350,7 +441,7 @@
 
 					<div class="row footer-bottom d-flex justify-content-between">
 						<div class="col-lg-4 col-sm-12 footer-social">
-							<a href="#"><i class="fa fa-envelope"></i></a>
+							<a href="mailto:dr.saadia.rhu@gmail.com"><i class="fa fa-envelope"></i></a>
 							<a href="#"><i class="fa fa-phone"></i></a>
 						</div>
 					</div>
@@ -370,5 +461,8 @@
 			<script src="js/waypoints.min.js"></script>
 			<script src="js/jquery.counterup.min.js"></script>
 			<script src="js/main.js"></script>
+			<script type="text/javascript" src="https://drsaadiarhu.blogspot.com/feeds/posts/default?alt=json&callback=handleBlogs">
+
+			</script>
 		</body>
 	</html>
