added script for blogs if blog posts are less than 3

--- a/index.html
+++ b/index.html
@@ -342,9 +342,22 @@
 							</p>
 						</div>
 					</div>
+					<div class="row">
+							<div class="single-blog col-lg-4 col-md-4">
+								<img class="f-img img-fluid mx-auto blog1Image" src="img/b1.jpg" alt="">
+							</div>
+
+							<div class="single-blog col-lg-4 col-md-4">
+								<img class="f-img img-fluid mx-auto blog2Image" src="img/b1.jpg" alt="">
+							</div>
+
+							<div class="single-blog col-lg-4 col-md-4">
+								<img class="f-img img-fluid mx-auto blog3Image" src="img/b1.jpg" alt="">
+							</div>
+					</div>
 					<div class="row" id="blogInfo">
 						<div class="single-blog col-lg-4 col-md-4" id="blog1">
-							<img class="f-img img-fluid mx-auto blogImage" src="img/b1.jpg" alt="">
+
 							<h4>
 								<a href="#" class="blogLink">Coming Soon</a>
 							</h4>
@@ -354,7 +367,6 @@
 
 						</div>
 						<div class="single-blog col-lg-4 col-md-4" id="blog2">
-							<img class="f-img img-fluid mx-auto blogImage" src="img/b2.jpg" alt="">
 							<h4>
 								<a href="https://drsaadiarhu.blogspot.com" class="blogLink">Coming Soon</a>
 							</h4>
@@ -364,7 +376,6 @@
 
 						</div>
 						<div class="single-blog col-lg-4 col-md-4" id="blog3">
-							<img class="f-img img-fluid mx-auto blogImage" src="img/b3.jpg" alt="">
 							<h4>
 								<a href="#" class="blogLink">Coming Soon</a>
 							</h4>
