--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<link rel="stylesheet" href="css/nice-select.css">
 			<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 			<link rel="stylesheet" href="css/bootstrap.css">
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 			<link rel="stylesheet" href="css/main.css">
 			<link rel="stylesheet" href="css/myStyles.css">
 		</head>
@@ -342,52 +343,92 @@
 							</p>
 						</div>
 					</div>
-					<div class="row">
-							<div class="single-blog col-lg-4 col-md-4">
-								<img class="f-img img-fluid mx-auto blog1Image" src="img/b1.jpg" alt="">
-							</div>
+					<div class="row hidden-xs">
+						<div class="single-blog col-lg-4 col-md-4">
+							<img class="f-img img-fluid mx-auto blog1Image " src="img/b1.jpg" alt="">
+						</div>
 
-							<div class="single-blog col-lg-4 col-md-4">
-								<img class="f-img img-fluid mx-auto blog2Image" src="img/b1.jpg" alt="">
-							</div>
+						<div class="single-blog col-lg-4 col-md-4">
+							<img class="f-img img-fluid mx-auto blog2Image" src="img/b2.jpg" alt="">
+						</div>
 
-							<div class="single-blog col-lg-4 col-md-4">
-								<img class="f-img img-fluid mx-auto blog3Image" src="img/b1.jpg" alt="">
-							</div>
+						<div class="single-blog col-lg-4 col-md-4">
+							<img class="f-img img-fluid mx-auto blog3Image " src="img/b3.jpg" alt="">
+						</div>
 					</div>
+
 					<div class="row" id="blogInfo">
 						<div class="single-blog col-lg-4 col-md-4" id="blog1">
-
+								<img class="f-img img-fluid mx-auto blog1Image hidden-lg hidden-md hidden-sm" src="img/b1.jpg" alt="">
 							<h4>
 								<a href="#" class="blogLink">Coming Soon</a>
 							</h4>
 							<p class="blogDesc">
 								This blog post is yet unpublished.
 							</p>
-
+							<div class="single-blog col-lg-4 col-md-4 hidden-lg hidden-md hidden-sm">
+								<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+									<div>
+										<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
+										<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
+									</div>
+									<div class="meta" id="blog1date">
+										Soon
+										<!-- <span class="lnr lnr-heart"></span> 15
+										<span class="lnr lnr-bubble"></span> 04 -->
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="single-blog col-lg-4 col-md-4" id="blog2">
+							<img class="f-img img-fluid mx-auto blog2Image hidden-lg hidden-md hidden-sm" src="img/b2.jpg" alt="">
 							<h4>
 								<a href="https://drsaadiarhu.blogspot.com" class="blogLink">Coming Soon</a>
 							</h4>
 							<p class="blogDesc">
 								This blog post is yet unpublished.
 							</p>
-
+							<div class="single-blog col-lg-4 col-md-4 hidden-lg hidden-md hidden-sm">
+								<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+									<div>
+										<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
+										<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
+									</div>
+									<div class="meta" id="blog1date">
+										Soon
+										<!-- <span class="lnr lnr-heart"></span> 15
+										<span class="lnr lnr-bubble"></span> 04 -->
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="single-blog col-lg-4 col-md-4" id="blog3">
+							<img class="f-img img-fluid mx-auto blog3Image hidden-lg hidden-md hidden-sm" src="img/b3.jpg" alt="">
 							<h4>
 								<a href="#" class="blogLink">Coming Soon</a>
 							</h4>
 							<p class="blogDesc">
 								This blog post is yet unpublished.
 							</p>
+							<div class="single-blog col-lg-4 col-md-4 hidden-lg hidden-md hidden-sm">
+								<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+									<div>
+										<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
+										<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
+									</div>
+									<div class="meta" id="blog1date">
+										Soon
+										<!-- <span class="lnr lnr-heart"></span> 15
+										<span class="lnr lnr-bubble"></span> 04 -->
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="container">
-					<div class="row">
+					<div class="row hidden-xs">
 						<div class="single-blog col-lg-4 col-md-4">
 							<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 								<div>
