--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<p><h4>Consultant Rheumatologist in Islamabad</h4>
 									MBBS | MRCP | Eular Course On Rheumatic Diseases | SCE (Specialty Certificate Examination)
 								</p>
-								<a href="#appoinment" class="primary-btn2 mt-20 text-uppercase main">Book an Appointment<span class="lnr lnr-arrow-right"></span></a>
+								<a href="#appoinment" class="primary-btn2 mt-20 text-uppercase main">Book an Appointment<span class="lnr lnr-arrow-right arrow"></span></a>
 							</div>
 							<!-- <div class="col-lg-6 d-flex align-self-end img-right visible-lg visible-md visible-sm">
 								<img class="img-fluid" src="img/header-img.png" alt="">
