--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 								<h1 class="text-uppercase">
 									Dr. Saadia Riaz
 								</h1>
-								<p><h4>Consultant Rheumatologist in Islamabad</h4>
+								<p>
+									<h4>Consultant Rheumatologist in Islamabad</h4>
 									MBBS | MRCP | Eular Course On Rheumatic Diseases | SCE (Specialty Certificate Examination)
 								</p>
 								<a href="#appoinment" class="primary-btn2 mt-20 text-uppercase main">Book an Appointment<span class="lnr lnr-arrow-right arrow"></span></a>
@@ -372,7 +373,7 @@
 										<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
 										<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
 									</div>
-									<div class="meta" id="blog1date">
+									<div class="meta date">
 										Soon
 										<!-- <span class="lnr lnr-heart"></span> 15
 										<span class="lnr lnr-bubble"></span> 04 -->
@@ -394,7 +395,7 @@
 										<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
 										<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
 									</div>
-									<div class="meta" id="blog1date">
+									<div class="meta date">
 										Soon
 										<!-- <span class="lnr lnr-heart"></span> 15
 										<span class="lnr lnr-bubble"></span> 04 -->
@@ -416,7 +417,7 @@
 										<!-- <img class="img-fluid" src="img/user.png" alt=""> -->
 										<a href="https://drsaadiarhu.blogspot.com"><span>Dr. Saadia Riaz</span></a>
 									</div>
-									<div class="meta" id="blog1date">
+									<div class="meta date">
 										Soon
 										<!-- <span class="lnr lnr-heart"></span> 15
 										<span class="lnr lnr-bubble"></span> 04 -->
