--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 			<link rel="stylesheet" href="css/bootstrap.css">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+			<link rel="stylesheet" href="css/datepicker.css">
 			<link rel="stylesheet" href="css/main.css">
 			<link rel="stylesheet" href="css/myStyles.css">
 		</head>
@@ -44,7 +45,7 @@
 								<nav class="hide">
 									<a href="#home">Home</a>
 									<a href="#service">Services</a>
-									<a href="#appoinment">Appoinment</a>
+									<a href="#appoinment">Appointment</a>
 									<a href="#location">When &amp; Where</a>
 									<a href="#blogs">Blog</a>
 								</nav>
@@ -513,9 +514,8 @@
 			<script src="js/jquery.magnific-popup.min.js"></script>
 			<script src="js/waypoints.min.js"></script>
 			<script src="js/jquery.counterup.min.js"></script>
+			<script type="text/javascript" src="js/bootstrap-datepicker.js">	</script>
 			<script src="js/main.js"></script>
-			<script type="text/javascript" src="https://drsaadiarhu.blogspot.com/feeds/posts/default?alt=json&callback=handleBlogs">
-
-			</script>
+			<script type="text/javascript" src="https://drsaadiarhu.blogspot.com/feeds/posts/default?alt=json&callback=handleBlogs">			</script>
 		</body>
 	</html>
