--- a/index.html
+++ b/index.html
@@ -493,10 +493,11 @@
 						</div>
 					</div>
 
-					<div class="row footer-bottom d-flex justify-content-between">
-						<div class="col-lg-4 col-sm-12 footer-social">
+					<div class=" footer-bottom d-flex justify-content-between">
+						<div class=" footer-social">
 							<a href="mailto:dr.saadia.rhu@gmail.com"><i class="fa fa-envelope"></i></a>
-							<a href="#"><i class="fa fa-phone"></i></a>
+							<a href="tel:+92 51 2854772"><i class="fa fa-phone"></i></a>
+							<a href="http://drsaadiarhu.blogspot.com"><i class="fa fa-rss"></i></a>
 						</div>
 					</div>
 				</div>
