fixed spelling of rheumatologist

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<span class="lnr lnr-heart-pulse"></span>
 								</div>
 								<div class="desc">
-									<h4 class="text-uppercase">What is a Rheumatology?</h4>
+									<h4 class="text-uppercase">What is a Rheumatologist?</h4>
 									<p>
 										A rheumatologist is a physician who is qualified in the diagnosis and treatment of arthritis and other diseases of the joints, muscles and bones.
 									</p>
