added twitter and fixed blogs

--- a/index.html
+++ b/index.html
@@ -348,23 +348,23 @@
 					</div>
 					<div class="row hidden-xs">
 						<div class="single-blog col-lg-4 col-md-4">
-							<img class="f-img img-fluid mx-auto blog1Image " src="img/b1.jpg" alt="">
+							<a class="image1Link" target="_blank" href="#"><img class="f-img img-fluid mx-auto blog1Image " src="img/b1.jpg" alt=""></a>
 						</div>
 
 						<div class="single-blog col-lg-4 col-md-4">
-							<img class="f-img img-fluid mx-auto blog2Image" src="img/b2.jpg" alt="">
+							<a class="image2Link" target="_blank" href="#"><img class="f-img img-fluid mx-auto blog2Image" src="img/b2.jpg" alt=""></a>
 						</div>
 
 						<div class="single-blog col-lg-4 col-md-4">
-							<img class="f-img img-fluid mx-auto blog3Image " src="img/b3.jpg" alt="">
+							<a class="image3Link" target="_blank" href="#"><img class="f-img img-fluid mx-auto blog3Image " src="img/b3.jpg" alt=""></a>
 						</div>
 					</div>
 
 					<div class="row" id="blogInfo">
 						<div class="single-blog col-lg-4 col-md-4" id="blog1">
-								<img class="f-img img-fluid mx-auto blog1Image hidden-lg hidden-md hidden-sm" src="img/b1.jpg" alt="">
+								<a class="image1Link" target="_blank" href="#"><img class="f-img img-fluid mx-auto blog1Image hidden-lg hidden-md hidden-sm" src="img/b1.jpg" alt=""></a>
 							<h4>
-								<a href="#" class="blogLink">Coming Soon</a>
+								<a href="#" class="blogLink" target="_blank">Coming Soon</a>
 							</h4>
 							<p class="blogDesc">
 								This blog post is yet unpublished.
@@ -384,9 +384,9 @@
 							</div>
 						</div>
 						<div class="single-blog col-lg-4 col-md-4" id="blog2">
-							<img class="f-img img-fluid mx-auto blog2Image hidden-lg hidden-md hidden-sm" src="img/b2.jpg" alt="">
+							<a class="image2Link" target="_blank" href="#"><img class="f-img img-fluid mx-auto blog2Image hidden-lg hidden-md hidden-sm" src="img/b2.jpg" alt=""></a>
 							<h4>
-								<a href="https://drsaadiarhu.blogspot.com" class="blogLink">Coming Soon</a>
+								<a href="https://drsaadiarhu.blogspot.com" class="blogLink" target="_blank">Coming Soon</a>
 							</h4>
 							<p class="blogDesc">
 								This blog post is yet unpublished.
@@ -406,9 +406,9 @@
 							</div>
 						</div>
 						<div class="single-blog col-lg-4 col-md-4" id="blog3">
-							<img class="f-img img-fluid mx-auto blog3Image hidden-lg hidden-md hidden-sm" src="img/b3.jpg" alt="">
+							<a class="image3Link" target="_blank" href="#"><img class="f-img img-fluid mx-auto blog3Image hidden-lg hidden-md hidden-sm" src="img/b3.jpg" alt=""></a>
 							<h4>
-								<a href="#" class="blogLink">Coming Soon</a>
+								<a href="#" class="blogLink" target="_blank">Coming Soon</a>
 							</h4>
 							<p class="blogDesc">
 								This blog post is yet unpublished.
@@ -477,7 +477,6 @@
 
 				<div class="coverLoad"></div>
 			</section>
-
 			<!-- start footer Area -->
 			<footer class="footer-area section-gap">
 				<div class="container">
@@ -496,9 +495,11 @@
 
 					<div class=" footer-bottom d-flex justify-content-between">
 						<div class=" footer-social">
+							<a href="https://twitter.com/drsriazrheuma"><i class="fa fa-twitter"></i></a>
 							<a href="mailto:dr.saadia.rhu@gmail.com"><i class="fa fa-envelope"></i></a>
 							<a href="tel:+92 51 2854772"><i class="fa fa-phone"></i></a>
 							<a href="http://drsaadiarhu.blogspot.com"><i class="fa fa-rss"></i></a>
+
 						</div>
 					</div>
 				</div>
