--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
 							</p>
 						</div>
 					</div>
-					<div id="map"></div>
-			    <script>
+					<div id="map" class="container-fluid"><iframe class="col-lg-12 col-xs-12 col-md-12 col-sm-12" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13275.640645511321!2d73.041442!3d33.7112735!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4e42e668db17b70d!2sDr.+Saadia+Riaz!5e0!3m2!1sen!2s!4v1533756196394"  height="600" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+			    <!-- <script>
 					function initMap() {
 						var uluru = {lat: 33.711588, lng: 73.041430};
 						var map = new google.maps.Map(document.getElementById('map'), {
@@ -254,7 +254,7 @@
 			    </script>
 			    <script async defer
 			    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCD21_fnvdTD2Yix8S0J0VdViwdtGkal-Y&callback=initMap">
-			    </script>
+			    </script> -->
 				</div>
 
 				<div class="container" id="timings">
@@ -312,7 +312,7 @@
 									Fridays
 								</td>
 								<td>
-									Available during morning.
+									2:00 p.m. - 4:00 p.m.
 								</td>
 							</tr>
 							<tr class="bottomBorder">
@@ -320,7 +320,7 @@
 									Saturdays
 								</td>
 								<td>
-									Not Available
+									6:00 p.m. - 8:00 p.m.
 								</td>
 							</tr>
 							<tr class="bottomBorder">
