added email option

--- a/index.html
+++ b/index.html
@@ -172,17 +172,20 @@
 							<div class="single-footer-widget">Call <h3>+92 51 2854772</h3> to book a definite appointment</div>
 							<form class="booking-form" id="myForm" action="https://formspree.io/dr.saadia.rhu@gmail.com" method="POST">
 								 	<div class="row">
-								 		<div class="col-lg-12 d-flex flex-column">
+								 		<div class="col-lg-6 d-flex flex-column">
 							 				<input name="name" placeholder="Patient name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Patient name'" class="single-in mt-20" required="" type="text" required>
 								 		</div>
 							 			<div class="col-lg-6 d-flex flex-column">
 											<input name="phone" placeholder="Phone" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Phone'" class="single-in mt-20" required="" type="text" required>
 										</div>
+							 			<div class="col-lg-6 d-flex flex-column">
+											<input name="email" placeholder="Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email'" class="single-in mt-20" required="" type="text" required>
+										</div>
 										<div class="col-lg-6 d-flex flex-column">
 											<input id="datepicker2" name="app-date" class="single-in mt-20"  onblur="this.placeholder = 'Appointment date'" type="text" placeholder="Appointment date" required>
 										</div>
 										<div class="col-lg-12 flex-column">
-											<textarea class="form-control mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
+											<textarea class="form-control mt-20" name="message" placeholder="Message" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
 										</div>
 										<div class="col-lg-12 d-flex justify-content-end send-btn">
 											<button class="submit-btn primary-btn mt-20 text-uppercase" type="submit">confirm booking<span class="lnr lnr-arrow-right"></span></button>
