--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<script language=javascript>
 function redirect(){
-  window.location = "http://example.com";
+  window.location = "http://drsaadiariaz.com/";
 }
 </script>
 		<!-- Mobile Specific Meta -->
