--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
-									<a href="#home">Home</a>
-									<a href="#service">Services</a>
-									<a href="#appoinment">Appoinment</a>
-									<a href="#consultant">Consultants</a>
+									<a href="http://drsaadiariaz.com/">Home</a>
+									<a href="http://drsaadiariaz.com/#service">Services</a>
+									<a href="http://drsaadiariaz.com/appointment-form/">Appoinment</a>
+									<a href="http://drsaadiariaz.com/#about">Consultants</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
